<resources>
    <string name="app_name">Gasteando</string>
    <string name="correo">Correo</string>
    <string name="contrasenia">Contraseña</string>
    <string name="BtnIngresar">Ingresar</string>
    <string name="BtnRegistrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmarContrasenia">Confirmar Contraseña</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="OlvidarContrasenia">¿Olvidaste tu contraseña?</string>
    <string name="menu">Menu</string>
    <string name="resumengastos">Resumen Gastos</string>
    <string name="categoria">Categorias</string>
    <string name="acepto_terminos_y_condiciones">Acepto terminos y condiciones</string>
    <string name="registrate">Registrate</string>
    <string name="todo">TODO</string>
    <string name="toolbar">Toolbar</string>
    <string name="bottombar">Bottombar</string>
    <string name="alimentacion">Alimentación</string>
    <string name="transporte">Transporte</string>
    <string name="entretencion">Entretención</string>
    <string name="otro">Otro</string>
    <string name="ingresarproducto">Ingresar Productos</string>
    <string name="btningresar">Ingresar</string>
    <string name="cancelar">Cancelar</string>
    <string name="detalle">Detalle</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="monto">Monto</string>
    <string name="agregarproductos">Agregar Mas Productos</string>
    <string name="editarproductos">Editar Productos</string>
    <string name="gastosrealizados">Gastos Realizados</string>
    <string name="ingresarproductos">Ingresar Productos</string>
    <string name="verproductosingresados">Ver productos ingresados</string>
    <string name="calendario">Calendario</string>
    <string name="mostrardatos">Mostrar Datos</string>
    <string name="fechadefin">Fecha de fin</string>
    <string name="fechadeinicio">Fecha de inicio</string>
    <string name="seleccionaunacategoria">Selecciona una categoría</string>
    <string name="comparargastos">Comparar Gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="calendariofg">Calendario</string>
    <string name="comparar_gastos">Comparar Gastos</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="ingresar_producto">Ingresar Producto</string>
    <string name="comparar_gastosFG">Comparar Gastos</string>
    <string name="graficagastos">Grafica Gastos</string>
    <string name="calendarioFG">Calendario</string>
    <string name="detalles">Detalles</string>
    <string name="menu_principal_fg">Menu Principal</string>
    <string name="seleccione_el_intervalo_entre_2_fechas">Seleccione el intervalo entre 2 fechas</string>
    <string name="seleccione_intervalo_de_fecha">Seleccione Intervalo de Fecha</string>
    <string name="editardatos">Editar Datos</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="buscar_datos">Buscar Datos</string>
    <string name="editar_dato">Editar dato</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="categor_a">Categoría</string>
    <string name="detall">Detalle</string>
    <string name="fecha">Fecha</string>
    <string name="mont">Monto</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="eliminar_product">Eliminar Producto</string>
    <string name="selecciona_producto">Selecciona un producto</string>

</resources>