<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GastorealizadoFG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GastorealizadoFG">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/gastos_realizados"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/selecciona_una_fecha"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:onClick="mostrarDatePicker"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds"
        tools:text="@tools:sample/date/ddmmyy" />

    <!-- Combina el Spinner con el total -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="225dp"
        android:onClick="ingresarproductosfg"
        android:text="@string/agregarproductos"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/txtTotalGastos"
        android:layout_width="396dp"
        android:layout_height="219dp"
        android:layout_marginTop="230dp"
        android:hint="@string/detalles"
        android:textColorHint="#A1887F"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBuscarDatos"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="105dp"
        android:layout_marginTop="165dp"
        android:text="@string/buscar_datos" />

    <Button
        android:id="@+id/btnEliminarProducto"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-105dp"
        android:layout_marginTop="165dp"
        android:onClick="eliminarProductoSeleccionado"
        android:text="@string/eliminar_producto" />
</FrameLayout>
