<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <EditText
        android:id="@+id/correo"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="291dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="388dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginBottom="152dp"
        android:contextClickable="false"
        android:hint="@string/BtnIngresar"
        android:onClick="login"
        android:text="@string/BtnIngresar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="77dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="crearCuenta"
        android:text="@string/crearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="271dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="@string/contrasenia"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="369dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/OlvidarContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="439dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="143dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_myplaces"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="78dp" />
</androidx.constraintlayout.widget.ConstraintLayout>