<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IngresarproductosFG">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/IngresarproductosFG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/ingresarproductos"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/selecciona_una_fecha"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:onClick="mostrarDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <EditText
        android:id="@+id/etMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:autofillHints=""
        android:hint="@string/monto"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDetalle"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="12dp"
        android:onClick="gastorealizadofg"
        android:text="@string/BtnIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMonto"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="390dp"
        android:onClick="menu"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMonto"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/etDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:autofillHints=""
        android:hint="@string/detalle"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <Button
        android:id="@+id/verproductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_marginBottom="10dp"
        android:onClick="gastorealizadofg"
        android:text="@string/verproductosingresados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:toggleCheckedStateOnClick="false"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

</FrameLayout>
