<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CompararGastosFG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"

    tools:context=".CompararGastosFG"
    tools:ignore="ExtraText">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFechaInicio"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/fechadeinicio"
            android:inputType="none"
            android:minHeight="48dp"
            android:onClick="mostrarDatePickerInicio"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

        <EditText
            android:id="@+id/etFechaFin"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/fechadefin"
            android:inputType="none"
            android:onClick="mostrarDatePickerFin"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck" />
        android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnMostrarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/mostrardatos" />

    <TextView
        android:id="@+id/tvResultados"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="270dp" />

    <TextView
        android:id="@+id/comparargastotl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comparar_gastosFG"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,VisualLintOverlap" />

</FrameLayout>